add support for searching by stock symbol

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@ meta_description "Public holdings disclosures from institutional investment mana
   <h1 class="mt-12 sm:mt-32 sm:text-5xl mb-4">SEC 13F Filings</h1>
 
   <div class="relative mb-12">
-    <input id="autocomplete" type="search" class="text-lg sm:text-2xl w-full rounded shadow" autofocus data-url="<%= autocomplete_path %>" placeholder="Search by manager, investment, CIK, or CUSIP…">
+    <input id="autocomplete" type="search" class="text-lg sm:text-2xl w-full rounded shadow" autofocus data-url="<%= autocomplete_path %>" placeholder="Search by manager or investment…">
     <div class="autocomplete-results"></div>
   </div>
 
