--- a/app/views/thirteen_fs/all_cusip_holders.html.erb
+++ b/app/views/thirteen_fs/all_cusip_holders.html.erb
@@ -1,5 +1,5 @@
 <%
-title "#{@investment_name} – Q#{@quarter} #{@year} 13F Holders"
+title "#{@name_for_title} – Q#{@quarter} #{@year} 13F Holders"
 canonical_url all_cusip_holders_url(cusip: @cusip, year: @year, quarter: @quarter)
 meta_description "Institutional investment managers who reported holding #{@investment_name} in Q#{@quarter} #{@year}"
 %>
