--- a/app/views/thirteen_fs/cusip_index.html.erb
+++ b/app/views/thirteen_fs/cusip_index.html.erb
@@ -1,5 +1,5 @@
 <%
-title "#{@investment_name} 13F Holders"
+title "#{@name_for_title} 13F Holders"
 canonical_url cusip_index_url(cusip: @cusip)
 meta_description "Historical institutional 13F holders of #{@investment_name}"
 %>
