--- a/app/views/thirteen_fs/manager_cusip_history.html.erb
+++ b/app/views/thirteen_fs/manager_cusip_history.html.erb
@@ -1,5 +1,5 @@
 <%
-title "#{@manager.name} – #{@investment_name} 13F Holdings History"
+title "#{@manager.name} – #{@name_for_title} 13F Holdings History"
 canonical_url manager_cusip_history_url(cik: @manager.cik, cusip: @cusip)
 meta_description "#{@manager.name} historical 13F holdings disclosures of #{@investment_name}"
 %>
